--- a/Exercise_1/exercise_1.tex
+++ b/Exercise_1/exercise_1.tex
@@ -1,6 +1,41 @@
-% Material for the first question
 \subsection{}
-Texte de la sous-section 1.1.
+\input{"Exercise_1/OUTPUT/summary.tex"}
 
 \subsection{}
-Texte de la sous-section 1.2.
+\subsubsection*{(a)}
+
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/emp_wrt_gdp.png}
+  \caption{Self employment rate with respect to GDP}
+  \label{fig:emp_gdp}
+\end{figure}
+
+
+Figure \ref{fig:emp_gdp} shows a clear negative relationship between the share of self employment and gdp. The empirical correlation coefficient is equal to $-0.89$
+which is very close to $-1$. The anticorrelation is very strong.
+\subsubsection*{(b)}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/emp_wrt_agro.png}
+  \caption{Self employment rate with respect to employment share in the agricultural sector}
+  \label{fig:emp_agro}
+\end{figure}
+
+As in the previous question, Figure \ref{fig:emp_agro} shows a clear positive relationship between the share of self employment and share of employment in the agricultural sector. The empirical correlation coefficient is equal to $0.91$
+which is very close to $1$. The correlation is very strong.
+
+\subsubsection*{(c)}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/bar_emp_literacy.png}
+  \caption{Average self employement rate as a function of the literacy category}
+  \label{fig:emp_lit}
+\end{figure}
+
+Figure \ref{fig:emp_lit} seems to demonstrate a negative relationship between the literacy category of the population and the self employment rate.
+
+\subsection{}
+\input{"Exercise_1/OUTPUT/model_3.tex"}
