--- a/Exercise_1/exercise_1.tex
+++ b/Exercise_1/exercise_1.tex
@@ -5,7 +5,7 @@
 \subsubsection*{(a)}
 
 
-\begin{figure}[H]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/emp_wrt_gdp.png}
   \caption{Self employment rate with respect to GDP}
@@ -17,7 +17,7 @@ Figure \ref{fig:emp_gdp} shows a clear negative relationship between the share o
 which is very close to $-1$. The anticorrelation is very strong.
 \subsubsection*{(b)}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/emp_wrt_agro.png}
   \caption{Self employment rate with respect to employment share in the agricultural sector}
@@ -28,7 +28,7 @@ As in the previous question, Figure \ref{fig:emp_agro} shows a clear positive re
 which is very close to $1$. The correlation is very strong.
 
 \subsubsection*{(c)}
-\begin{figure}[H]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=0.8\textwidth]{Exercise_1/OUTPUT/bar_emp_literacy.png}
   \caption{Average self employement rate as a function of the literacy category}
@@ -38,4 +38,4 @@ which is very close to $1$. The correlation is very strong.
 Figure \ref{fig:emp_lit} seems to demonstrate a negative relationship between the literacy category of the population and the self employment rate.
 
 \subsection{}
-\input{"Exercise_1/OUTPUT/model_3.tex"}
+\input{"Exercise_1/OUTPUT/results.tex"}
