--- a/main.tex
+++ b/main.tex
@@ -4,17 +4,13 @@
 \usepackage[english]{babel}
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{geometry}
-\usepackage{titling}
 \usepackage{fancyhdr}
-\usepackage{lipsum}
-\usepackage{parskip}
-\usepackage{forest}
 \usepackage{tikz}
-\usepackage{stmaryrd}
-\usepackage{listings}
 \usepackage{graphicx}
 \usepackage{float}
-\usepackage{csvsimple}
+\usepackage{dcolumn}  % Pour aligner les nombres dans les colonnes
+\usepackage{booktabs}  % Pour des lignes horizontales de meilleure qualité
+\usepackage{caption}   % Pour personnaliser les légendes des tableaux
 
 
 \setlength{\headheight}{14.49998pt}
