--- a/Exercise_1/OUTPUT/results.tex
+++ b/Exercise_1/OUTPUT/results.tex
@@ -1,10 +1,10 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Mer, déc 06, 2023 - 21:45:16
+% Date and time: Jeu, déc 07, 2023 - 11:24:15
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Results} 
-  \label{} 
+  \caption{Linear Regressions - Exercise 1} 
+  \label{results_1} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
