--- a/Exercise_1/OUTPUT/results.tex
+++ b/Exercise_1/OUTPUT/results.tex
@@ -1,9 +1,9 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Jeu, déc 07, 2023 - 11:24:15
+% Date and time: Jeu, déc 07, 2023 - 21:46:28
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Linear Regressions - Exercise 1} 
+  \caption{Simple and Extended Models - Exercise 1} 
   \label{results_1} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
