--- a/Exercise_3/OUTPUT/results.tex
+++ b/Exercise_3/OUTPUT/results.tex
@@ -1,9 +1,9 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Mer, déc 06, 2023 - 22:48:47
+% Date and time: Ven, déc 08, 2023 - 16:57:32
 % Requires LaTeX packages: dcolumn 
 \begin{table}[!htbp] \centering 
-  \caption{Results} 
+  \caption{Ordinary Least Square Estimation - Exercise 3} 
   \label{results2} 
 \begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} } 
 \\[-1.8ex]\hline 
