--- a/Exercise_3/OUTPUT/summary.tex
+++ b/Exercise_3/OUTPUT/summary.tex
@@ -1,17 +1,17 @@
 % latex table generated in R 4.2.1 by xtable 1.8-4 package
-% Wed Dec  6 22:35:15 2023
+% Fri Dec  8 16:48:52 2023
 \begin{table}[ht]
 \centering
-\begin{tabular}{llllllr}
+\begin{tabular}{lllllll}
   \hline
-var & median & mean & min & max & sd & NAs \\ 
+var & median & mean & min & max & sd & rsd \\ 
   \hline
-business\_crea & 0.1 & 0.1 & 5.6e-02 & 0.3 & 3.1e-02 &   0 \\ 
-  nb\_crimes & 73.0 & 149.8 & 9.0 & 1.0e+04 & 451.3 &   0 \\ 
-  nb\_households & 9.8e+03 & 1.9e+04 & 3.7e+03 & 1.4e+06 & 5.3e+04 &   0 \\ 
-  pop & 2.0e+04 & 3.5e+04 & 1.0e+04 & 2.2e+06 & 8.8e+04 &   0 \\ 
-  income & 2.0 & 2.9 & 1.0 & 6.0 & 1.1 &   0 \\ 
-  crime\_rate & 7.2e-03 & 7.9e-03 & 1.0e-03 & 3.0e-02 & 4.1e-03 &   0 \\ 
+business\_crea & 0.1 & 0.1 & 5.6e-02 & 0.3 & 3.1e-02 & 0.2 \\ 
+  nb\_crimes & 73.0 & 149.8 & 9.0 & 1.0e+04 & 451.3 & 3.0 \\ 
+  nb\_households & 9.8e+03 & 1.9e+04 & 3.7e+03 & 1.4e+06 & 5.3e+04 & 2.9 \\ 
+  pop & 2.0e+04 & 3.5e+04 & 1.0e+04 & 2.2e+06 & 8.8e+04 & 2.5 \\ 
+  income & 2.0 & 2.9 & 1.0 & 6.0 & 1.1 & 0.4 \\ 
+  crime\_rate & 7.2e-03 & 7.9e-03 & 1.0e-03 & 3.0e-02 & 4.1e-03 & 0.5 \\ 
    \hline
 \end{tabular}
 \caption{Descriptive statistics} 
