--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,8 @@
 \section{The Basics}
 \input{Exercise_1/exercise_1.tex}
 
-\section{Heteroskedasticity \& Monte Carlo Simulations}
-\input{Exercise_2/exercise_2.tex}
-
+\newpage
+\stepcounter{section}
 \section{Instrumental Variables}
 \input{Exercise_3/exercise_3.tex}
 
