--- a/Exercise_1/exercise_1.tex
+++ b/Exercise_1/exercise_1.tex
@@ -115,3 +115,6 @@ The coefficient $\beta_3$ is significantly different from zero at the 1\% level 
 \input{Exercise_1/OUTPUT/wls.tex}
 \subsection{What can you conclude about the factors driving differences in self-employment rates at the
 macro-level based on your above answers? Can these results be interpreted as causal?}
+It appear from the previous results that the main effect on self-employment comes from the size of the economy and then from the specialization of this economy (size of the agricultural sector).
+This was expected as a bigger economy comes with organization changes and larger firms thus decreasing the self employment rate.
+It seems very intuitive and the correlation is indeed very strong. However one should be very careful while underlying causal effects and inspect the issue further by running new experiments.
