--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{parskip} % Aligned paragraphs
 \usepackage{titlesec} % Handles subsection title sizes
 \usepackage{enumitem} % Handles section enumerations 1.1.a...
+\usepackage{rotating} % Pour rotate des trucs
 
 % Configuration de la numérotation des sections
 \renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}}
